# cmake_demo

src/: CMakeLists.txt  a.out  bak  main.cpp
src/hello/: hello_world.cpp  hello_world.h
src/third/model1/: CMakeLists.txt  hello_static_library.cpp  hello_static_library.h
src/third/model2/: CMakeLists.txt  hello_share_library.cpp  hello_share_library.h
src/third_src_lib1/model1/: hello_third_src_static_lib.cpp
src/third_src_lib1/model2/: CMakeLists.txt  hello_third_src_share_lib.cpp  hello_third_src_share_lib.h
src/third_src_lib1/test/: CMakeCache.txt  CMakeLists.txt  Makefile  bak  cmake_install.cmake  demo  main.cpp  release.sh
src/third_src_lib1/test/sub/: CMakeLists.txt  Makefile  cmake_install.cmake  hello_third_src_static_lib.h
third_lib/include/: hello_third_share_lib.h  hello_third_static_lib.h
third_lib/lib/: a.out  hello_third_share_lib.cpp  hello_third_static_lib.cpp  main.cpp
